[gd_scene load_steps=2 format=3 uid="uid://bcx8ny7k2p3mq"]

[ext_resource type="Script" uid="uid://c3kdxytd13mtj" path="res://scenes/midi/piano_adaptive/piano_adaptive.gd" id="1"]

[node name="AdaptivePiano" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HeaderHBox" type="HBoxContainer" parent="VBoxContainer/HeaderPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderPanel/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLarge"
text = "Adaptive MIDI Piano"

[node name="InfoLabel" type="Label" parent="VBoxContainer/HeaderPanel/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Keys: 88 | Click to play"
horizontal_alignment = 2

[node name="PianoContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PianoMargin" type="MarginContainer" parent="VBoxContainer/PianoContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PianoVBox" type="VBoxContainer" parent="VBoxContainer/PianoContainer/PianoMargin"]
layout_mode = 2

[node name="PianoRowsContainer" type="VBoxContainer" parent="VBoxContainer/PianoContainer/PianoMargin/PianoVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ControlsTogglePanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ToggleHBox" type="HBoxContainer" parent="VBoxContainer/ControlsTogglePanel"]
layout_mode = 2

[node name="ToggleControlsButton" type="Button" parent="VBoxContainer/ControlsTogglePanel/ToggleHBox"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Toggle parameter controls visibility"
text = "Show Controls ▼"

[node name="QuickInfoLabel" type="Label" parent="VBoxContainer/ControlsTogglePanel/ToggleHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "C1-C3 | 48 keys | Vol: 80% | Vel: 0"
horizontal_alignment = 1

[node name="ControlsOverlay" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="ControlsMargin" type="MarginContainer" parent="VBoxContainer/ControlsOverlay"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ControlsVBox" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="OctaveControlsHBox" type="HBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="OctaveGroup" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OctaveGroupLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/OctaveGroup"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Octave Range"

[node name="OctaveControlsHBox" type="HBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/OctaveGroup"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OctaveLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/OctaveGroup/OctaveControlsHBox"]
layout_mode = 2
text = "Current:"

[node name="OctaveDownButton" type="Button" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/OctaveGroup/OctaveControlsHBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Previous octave range"
text = "◀"

[node name="CurrentOctaveLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/OctaveGroup/OctaveControlsHBox"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "C3-C8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OctaveUpButton" type="Button" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/OctaveGroup/OctaveControlsHBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Next octave range"
text = "▶"

[node name="KeyCountLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/OctaveGroup/OctaveControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Keys: 88"
horizontal_alignment = 2

[node name="LayoutGroup" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LayoutGroupLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Layout Configuration"

[node name="LayoutControlsHBox" type="HBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="KeysControls" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox"]
layout_mode = 2

[node name="KeysLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/KeysControls"]
layout_mode = 2
text = "Keys per Row:"

[node name="KeysHBox" type="HBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/KeysControls"]
layout_mode = 2

[node name="KeysDownButton" type="Button" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/KeysControls/KeysHBox"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
tooltip_text = "Fewer keys"
text = "-"

[node name="CurrentKeysLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/KeysControls/KeysHBox"]
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
text = "61"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeysUpButton" type="Button" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/KeysControls/KeysHBox"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
tooltip_text = "More keys"
text = "+"

[node name="RowsControls" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox"]
layout_mode = 2

[node name="RowsLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/RowsControls"]
layout_mode = 2
text = "Number of Rows:"

[node name="RowsHBox" type="HBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/RowsControls"]
layout_mode = 2

[node name="RowsDownButton" type="Button" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/RowsControls/RowsHBox"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
tooltip_text = "Fewer rows"
text = "-"

[node name="CurrentRowsLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/RowsControls/RowsHBox"]
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RowsUpButton" type="Button" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/OctaveControlsHBox/LayoutGroup/LayoutControlsHBox/RowsControls/RowsHBox"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
tooltip_text = "More rows"
text = "+"

[node name="AudioControlsHBox" type="HBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VolumeGroup" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeGroupLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/VolumeGroup"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Volume Control"

[node name="VolumeControlsHBox" type="HBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/VolumeGroup"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/VolumeGroup/VolumeControlsHBox"]
layout_mode = 2
text = "Master:"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/VolumeGroup/VolumeControlsHBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Master volume control"
max_value = 1.0
step = 0.01
value = 0.8

[node name="VolumeValueLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/VolumeGroup/VolumeControlsHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 1

[node name="MIDIGroup" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MIDIGroupLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/MIDIGroup"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "MIDI Options"

[node name="MIDIControlsVBox" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/MIDIGroup"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VelocityToggle" type="CheckButton" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/MIDIGroup/MIDIControlsVBox"]
layout_mode = 2
tooltip_text = "When enabled, all MIDI notes play at fixed volume"
text = "Ignore Velocity"

[node name="NoteOffToggle" type="CheckButton" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/MIDIGroup/MIDIControlsVBox"]
layout_mode = 2
tooltip_text = "When enabled, MIDI note off messages are ignored, allowing sustained polyphony"
text = "Ignore Note Off"

[node name="StatusGroup" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusGroupLabel" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/StatusGroup"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Status Information"

[node name="StatusVBox" type="VBoxContainer" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/StatusGroup"]
layout_mode = 2

[node name="KeyCountLabel2" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/StatusGroup/StatusVBox"]
layout_mode = 2
text = "48 keys | Vel: 0"

[node name="ResolutionInfo" type="Label" parent="VBoxContainer/ControlsOverlay/ControlsMargin/ControlsVBox/AudioControlsHBox/StatusGroup/StatusVBox"]
layout_mode = 2
text = "1920x1080"
